# NexusRAG

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mailmap  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  PROVENANCE.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-lock.txt  requirements.txt  server.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
app/: app.py
benchmarks/: __init__.py  run_benchmarks.py  thresholds.json
benchmarks/datasets/: qa_pairs_example.jsonl
benchmarks/datasets/nfcorpus_sample/: corpus.jsonl  qrels.jsonl  queries.jsonl
benchmarks/datasets/scifact_claims_sample/: claims_dev.jsonl  claims_train.jsonl  corpus.jsonl
benchmarks/datasets/scifact_sample/: corpus.jsonl  qrels.jsonl  queries.jsonl
benchmarks/results/: corrective_scifact.json  faithfulness_dev.json  generation_sample.json  nfcorpus_minilm.json  nfcorpus_test.json  nfcorpus_test_per_query.csv  scifact_minilm.json  scifact_test.json  scifact_test_per_query.csv  scifact_test_table.md  scifact_test_table.tex
configs/: default.yaml
docs/: ARCHITECTURE.md
examples/: sample_paper.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
notebooks/: 01_quickstart.ipynb
paper/: generated.tex  main.tex  nfcorpus_generated.tex  refs.bib
paper/tables/: cost_quality.tex  faithfulness.tex  nfcorpus.tex  scifact.tex
scripts/: app.py  chunk_text.py  extract_text.py  index_embeddings.py  ocr.py  ocr_script.py  retrieve.py
scripts/.ipynb_checkpoints/: clean_text-checkpoint.py  index_setup-checkpoint.py  llm_integration-checkpoint.py  ocr_script-checkpoint.py  requirements-checkpoint.txt
src/nexusrag/: __init__.py  cli.py  config.py  pipeline.py
src/nexusrag/agents/: __init__.py  citations.py  context_builder.py  llm.py  orchestrator.py  planner.py  query_analyzer.py  retriever_agent.py  synthesizer.py  verifier.py
src/nexusrag/api/: __init__.py  metrics.py  routes.py  security.py
src/nexusrag/eval/: __init__.py  __main__.py  corrective.py  datasets.py  faithfulness.py  gate.py  generation.py  indexes.py  metrics.py  ragtruth.py  report.py  reproduce.py  run.py  systems.py
src/nexusrag/generation/: __init__.py  citations.py  grounding.py  llm.py  orchestrator.py  query_analyzer.py  synthesizer.py  verifier.py
src/nexusrag/ingestion/: __init__.py  chunker.py  embedder.py  parser.py
src/nexusrag/retrieval/: __init__.py  corrective.py  dense.py  hybrid.py  reranker.py  sparse.py  splade.py  stopwords.py
src/nexusrag/storage/: __init__.py  document_store.py  vector_store.py
src/nexusrag/utils/: __init__.py  filenames.py  text.py
src/scinexusrag/: __init__.py  cli.py  config.py  pipeline.py
src/scinexusrag/api/: __init__.py  routes.py  security.py
src/scinexusrag/eval/: __main__.py  corrective.py  faithfulness.py  gate.py  generation.py  indexes.py  metrics.py  ragtruth.py  report.py  reproduce.py  run.py  systems.py
src/scinexusrag/generation/: __init__.py  grounding.py  llm.py  orchestrator.py  query_analyzer.py  synthesizer.py  verifier.py
src/scinexusrag/ingestion/: __init__.py  chunker.py  embedder.py
src/scinexusrag/retrieval/: __init__.py  corrective.py  dense.py  hybrid.py  reranker.py  sparse.py  splade.py
src/scinexusrag/storage/: __init__.py  document_store.py  vector_store.py
src/scinexusrag/utils/: __init__.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_answer_quality_r2.py  test_app.py  test_chunker.py  test_config.py  test_document_store.py  test_embedder.py  test_eval_datasets.py  test_eval_metrics.py  test_generation.py  test_generation_unit.py  test_metrics.py  test_parser.py  test_retrieval.py  test_retrieval_math.py  test_routes.py  test_security.py  test_vector_store.py
