[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusrag"
version = "0.1.0"
description = "Self-correcting RAG system for scientific literature synthesis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Urme Bose", email = "burme27@gmail.com"}
]
keywords = ["rag", "llm", "scientific-literature", "retrieval-augmented-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "gradio>=5.10.0",
    "sentence-transformers>=3.3.0",
    "httpx>=0.28.0",
    "requests>=2.32.0",
    "lancedb>=0.17.0",
    "pyarrow>=18.0.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.2",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/urme-b/NexusRAG"
Repository = "https://github.com/urme-b/NexusRAG"

[project.scripts]
nexusrag = "nexusrag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["nexusrag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "lancedb.*",
    "sentence_transformers.*",
    "gradio.*",
    "pyarrow",
    "pyarrow.*",
    "rank_bm25",
    "rank_bm25.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "nexusrag.storage.vector_store",
    "nexusrag.retrieval.sparse",
]
disable_error_code = ["import-untyped"]

[tool.coverage.run]
source = ["src/nexusrag"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
